### Добавлено: - глобальные переменные в node - линтинг папки gulp и gulpfile
### Исправлено:
- формирование меню
- в файле path.js ошибки по eslint
- в файле plugins.js ошибки по eslint
- в файле clean.js ошибки по eslint
- в файле fonts.js ошибки по eslint
- в файле html.js ошибки по eslint
- в файле images.js ошибки по eslint
- в файле hero.scss конец строки на lf
- в файле pixel-glass.js ошибки по eslint
- в файле scripts.js ошибки по eslint
- в файле server.js ошибки по eslint
- в файле styles.js ошибки по eslint
- в файле svg.js ошибки по eslint
- в файле vendor.js ошибки по eslint
- в файле gulpfile.js ошибки по eslint
- EOL установлен в LF

### Удалено
- макрос make_menu

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,13 @@
   },
   "env": {
     "es2017": true,
+    "node": true,
     "browser": true
   },
   "extends": "htmlacademy/vanilla",
+  "globals": {
+    "app": "writable"
+  },
   "rules": {
     // Additional rules...
   }
